[WIP] adding code coverage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,33 @@ if ( OPENMP_FOUND )
 endif ( )
 
 #-------------------------------------------------------------------------------
+# code coverage
+#-------------------------------------------------------------------------------
+
+if ( CMAKE_COMPILER_IS_GNUCXX )
+	if ( COVERAGE )
+		include ( CodeCoverage )
+
+		set ( CMAKE_BUILD_TYPE Debug )
+		set ( GCOV_PATH /usr/local/bin/gcov-11 )
+
+		append_coverage_compiler_flags ( )
+
+		# turn off optimization for non-skewed coverage reports
+		set ( CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0" )
+		set ( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0" )
+
+		setup_target_for_coverage_lcov (
+			NAME test_coverage
+			EXECUTABLE ctest
+			DEPENDENCIES ${PROJECT_NAME}
+			BASE_DIRECTORY "."
+			NO_DEMANGLE TRUE
+		)
+	endif ( )
+endif ( )
+
+#-------------------------------------------------------------------------------
 # report status
 #-------------------------------------------------------------------------------
 
